WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214330
AX: Inteterminate progressbar reading as 50% with Voiceover
https://bugs.webkit.org/show_bug.cgi?id=214330
Summary
AX: Inteterminate progressbar reading as 50% with Voiceover
James Nurthen
Reported
2020-07-14 16:12:29 PDT
Indeterminate progress bars are reading as 50% with Voiceover on iOS. Can reporoduce on iOS 13 and iPadOS 14.0(18A5319i) Find sample code at
https://react-spectrum.adobe.com/react-spectrum/ProgressCircle.html
under the code sample <ProgressCircle aria-label="Loading…" isIndeterminate /> This renders as <div aria-label="Loading…" aria-valuemin="0" aria-valuemax="100" role="progressbar" ...> ... </div> On MacOS this reads as "Loading... indeterminate progress bar" on iOS/iPadOS it reads as "Loading... 50%" The absence of aria-valuenow is meant to trigger the fact that this is an indeterminate progress bar.
Attachments
patch
(1.60 KB, patch)
2020-07-14 16:25 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(2.67 KB, patch)
2020-07-14 16:26 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(2.78 KB, patch)
2020-07-14 16:26 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-07-14 16:12:46 PDT
<
rdar://problem/65570800
>
chris fleizach
Comment 2
2020-07-14 16:25:38 PDT
Created
attachment 404302
[details]
patch
chris fleizach
Comment 3
2020-07-14 16:26:10 PDT
Created
attachment 404303
[details]
patch
chris fleizach
Comment 4
2020-07-14 16:26:49 PDT
Created
attachment 404304
[details]
patch
EWS
Comment 5
2020-07-31 10:27:52 PDT
Committed
r265148
: <
https://trac.webkit.org/changeset/265148
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404304
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug