AX: Inteterminate progressbar reading as 50% with Voiceover https://bugs.webkit.org/show_bug.cgi?id=214330 <rdar://problem/65570800>

Reviewed by Zalan Bujtas.

Expose indeterminate status to iOS API.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityIsIndeterminate]):
(-[WebAccessibilityObjectWrapper accessibilityIsInDescriptionListTerm]):
(-[WebAccessibilityObjectWrapper accessibilityIsInDescriptionListDefinition]):
  - Drive by style fix.


Canonical link: https://commits.webkit.org/227834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265148 268f45cc-cd09-0410-ab3c-d52691b4dbfc